--- a/appeleva/package.json
+++ b/appeleva/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
