--- a/appeleva/package.json
+++ b/appeleva/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "eslint": "^8",
