--- a/appeleva/package.json
+++ b/appeleva/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.8",
+    "@clerk/themes": "^2.1.14",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.2",
@@ -20,7 +22,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "svix": "^1.25.0"
   },
   "devDependencies": {
     "eslint": "^8",
