--- a/appeleva/.eslintrc.json
+++ b/appeleva/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
-    "react/no-unescaped-entities": "on"
+    "react/no-unescaped-entities": "warn"
   }
 }
